--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-Copyright 2016 - The CyanogenMod Project
+Copyright 2017 - The LineageOS Project
 
-Device configuration for Samsung Galaxy Tab 4 (SM-T535).
+Device configuration for Samsung Galaxy Tab 4 matisselte (SM-T535).
+
+WORK IN PROGRESS. WILL EAT YOUR DOPE.
